2006-06-20  Andreas Kupries <andreask@activestate.com>

	* me_cpucore.tcl: Bug fixes, additional state accessor commands,
	  more argument checking, extended error messages from validator
	  used by disassembler and state creation.

	* me_cpucore.test:                  Added testsuite for the cpu,
	* me_cpucore.testsuite:             already semi-prepared for when
	* me_cpucore.tests.asm-map.txt:     we get a C impl. of the ME cpu.
	* me_cpucore.tests.badasm-map.txt:  Largely table-driven.
	* me_cpucore.tests.badmach-map.txt: Incomplete.
	* me_cpucore.tests.semantics.txt:

2006-06-15  Andreas Kupries <andreask@activestate.com>

        * me_util.test: Split tests into separate file and added handling
	  of both regular and critcl tree.
        * me_util.testsuite: New file. Actual tests.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* me_tcl.test: Fixed use of duplicate test names.

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* me_tcl.test: More boilerplate simplified via use of test support.
	* me_util.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* me_tcl.test: Hooked into the new common test support code.
	* me_util.test:

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-03  Andreas Kupries <andreask@gila.activestate.com>

	* me_tcl.test (ME_state): token ranks are stored in an array/dict,
	  used dictsort to generate a canonical representation we can
	  compare against. ... Also duplicate tokclass test depending on
	  error message by "string is", different results in 8.4 and 8.5.

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* me_cpucore.tcl: Fixed more typos.
	* me_cpucore.tcl: Fixed namespace typo.

	* me_tcl.test:   Added forgotten check to tests, the packages cannot
	* me_utils.test: run against Tcl 8.3 and below.
